--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,7 @@
 <Limit GET POST>
 #require valid-user
 </Limit>
+<ifmodule mod_deflate.c>
+AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript
+</ifmodule>
+
