--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 magazine/media/
 node_modules/
+js/lib/flicklist.min.js
+js/lib/flicklist.js
+js/lib/iScroll.js
+js/lib/kinetic.js
+js/lib/kinetic.min.js
+js/scroll.js
